--- a/src/app/components/to-do-app/to-do-app.component.html
+++ b/src/app/components/to-do-app/to-do-app.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <h3>ToDoList</h3>
   <ng-container *ngIf="!editing">
-    <to-do-create></to-do-create>
+    <to-do-create (todo)="onAddTodo($event)"></to-do-create>
     <to-do-list></to-do-list>
   </ng-container>
-  <to-do-detail></to-do-detail>
+  <to-do-detail (delToDo)="onDeleteToDo($event)"></to-do-detail>
 </div>
