fix child subscrip event then write something into database twice

--- a/src/app/components/to-do-create/to-do-create.component.html
+++ b/src/app/components/to-do-create/to-do-create.component.html
@@ -1,11 +1,11 @@
 <div class="TScreateToDo">
-  <ng-container *ngIf="!create && !creating">
+  <ng-container *ngIf="!create">
       <div class="createBtnWrapper clickAble"
            (click)="startCreateToDo()">
           + ToDo
       </div>
   </ng-container>
-  <ng-container *ngIf="create && !creating">
+  <ng-container *ngIf="create">
       <div class="toDoWrapper">
           <span class="toDoIndicator"></span>
           <form id="todo-form" (ngSubmit)="savingToDo(input)" autocomplete="off">
