--- a/src/app/components/to-do-detail/to-do-detail.component.html
+++ b/src/app/components/to-do-detail/to-do-detail.component.html
@@ -8,7 +8,7 @@
           </div>
       </div>
       <div>
-        <button mat-flat-button color="primary" (click)=updateToDo() style="margin-right: 10px;">Save</button>
+        <button mat-flat-button color="primary" (click)=saveToDo() style="margin-right: 10px;">Save</button>
         <button mat-flat-button (click)=deleteToDo()>Delete</button>
       </div>
   </div>
