--- a/src/app/components/to-do-app/to-do-app.component.html
+++ b/src/app/components/to-do-app/to-do-app.component.html
@@ -1,8 +1,7 @@
 <div class="container">
   <h3>ToDoList</h3>
-  
   <ng-container *ngIf="!editing">
-    <to-do-create (todo)="onAddTodo($event)"></to-do-create>
+    <to-do-create></to-do-create>
     <to-do-list (selectToDo)="onSelectToDo($event)"></to-do-list>
   </ng-container>
   
