--- a/src/app/components/to-do-create/to-do-create.component.html
+++ b/src/app/components/to-do-create/to-do-create.component.html
@@ -1,4 +1,4 @@
-<div class="TScreateToDo">
+<div class="TScreateToDo" [ngClass]="{'editing': editing }">
   <ng-container *ngIf="!create">
       <div class="createBtnWrapper clickAble"
            (click)="startCreateToDo()">
