--- a/src/app/components/to-do-create/to-do-create.component.scss
+++ b/src/app/components/to-do-create/to-do-create.component.scss
@@ -2,6 +2,9 @@
 
 .TScreateToDo {
     padding-bottom: 10px;
+    &.editing{
+        display: none;
+    }
     .createBtnWrapper {
         padding: 10px;
         @include synergy-round-corners(5px);
