--- a/src/app/components/to-do-detail/to-do-detail.component.html
+++ b/src/app/components/to-do-detail/to-do-detail.component.html
@@ -1,4 +1,5 @@
-<div class="TStoDoDetail" [ngClass]="{'updateing': editing }" >  
+<div class="TStoDoDetail" [ngClass]="{'editing': editing }" >
+  wee  
   <div class="row" *ngIf="selectedToDo">
       <div class="col-md-12">
           <div class="form-group toDoSubject">
