--- a/src/app/components/to-do-detail/to-do-detail.component.scss
+++ b/src/app/components/to-do-detail/to-do-detail.component.scss
@@ -2,11 +2,12 @@
 
 .TStoDoDetail {
     display: none;
+
     .info {
         font-size: 9px;
     }
 
-    &.updateing{
+    &.editing{
         display: block;
     }
     .allStaffWrapper {
