--- a/src/app/components/to-do-list/to-do-list.component.scss
+++ b/src/app/components/to-do-list/to-do-list.component.scss
@@ -1,5 +1,8 @@
 @import "../../variables";
 .TStoDoList {
+    &.editing{
+        display: none;
+    }
     .toDoWrapper {
         @include synergy-round-corners(3px);
         margin-bottom: 10px;
