move selected toDO into store

--- a/src/app/components/to-do-app/to-do-app.component.html
+++ b/src/app/components/to-do-app/to-do-app.component.html
@@ -2,6 +2,6 @@
   <h3>ToDoList</h3>
  
   <to-do-create></to-do-create>
-  <to-do-list (selectToDo)="onSelectToDo($event)"></to-do-list>
-  <to-do-detail [selectedToDo]="selectedToDo"></to-do-detail>
+  <to-do-list></to-do-list>
+  <to-do-detail></to-do-detail>
 </div>
